--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
                 height: 60px;
                 margin-bottom: 20px;
             }
+            .footer-bottom{
+                background-color: #f2f2f2;
+                height: 150px;
+                margin-top: 20px;
+            }
             .header-title{
                 font-family: 'Quantico', sans-serif;
                 text-align: center;
@@ -129,5 +134,10 @@
                 </div>
             </div>
         </section>
+        <nav class="footer-bottom">
+            <div>
+                <h4 style="color: #9e9e9e; padding-left: 80px; padding-top: 50px">TechnoShop</h4>
+            </div>
+        </nav>
     </body>
 </html>
