--- a/product.html
+++ b/product.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Quantico&display=swap" rel="stylesheet">
-    <title>TechnoShop</title>
-    <style>
-        .header-top{
-            background-color: #212529;
-            height: 60px;
-            margin-bottom: 20px;
-        }
-        .header-title{
-            font-family: 'Quantico', sans-serif;
-            text-align: center;
-            color: white;
-            margin-top: 5px;
-        }
-        .button-cart{
-            float: right;
-            margin-left: 10px;
-            margin-right: 10px;
-            width: 85px;
-        }
-        .button-sign{
-            float: right;
-            margin-left: 10px;
-            margin-right: 10px;
-            width: 85px;
-        }
-    </style>
-</head>
-<body>
-<nav class="header-top">
-    <section class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <h1 class="header-title">Techno Shop</h1>
-            </div>
-            <div class="col-md-4">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Quantico&display=swap" rel="stylesheet">
+        <title>TechnoShop</title>
+        <style>
+            .header-top{
+                background-color: #212529;
+                height: 60px;
+                margin-bottom: 20px;
+            }
+            .header-title{
+                font-family: 'Quantico', sans-serif;
+                text-align: center;
+                color: white;
+                margin-top: 5px;
+            }
+            .button-cart{
+                float: right;
+                margin-left: 10px;
+                margin-right: 10px;
+                width: 85px;
+            }
+            .button-sign{
+                float: right;
+                margin-left: 10px;
+                margin-right: 10px;
+                width: 85px;
+            }
+        </style>
+    </head>
+    <body>
+        <nav class="header-top">
+            <section class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h1 class="header-title">Techno Shop</h1>
+                    </div>
+                    <div class="col-md-4">
 
-            </div>
-            <div class="col-md-4">
-                <button type="button" style="margin-top: 10px" class="btn btn-primary button-cart">Sign in</button>
-                <a style="text-decoration: none" href="cart.html">
-                    <button type="button" style="margin-top: 10px" class="btn btn-secondary button-sign"><img src="icons/cart-white.png" height="20px" width="20px">Cart</button></a>
-            </div>
-        </div>
-    </section>
-</nav>
-</body>
+                    </div>
+                    <div class="col-md-4">
+                        <button type="button" style="margin-top: 10px" class="btn btn-primary button-cart">Sign in</button>
+                        <a style="text-decoration: none" href="cart.html">
+                            <button type="button" style="margin-top: 10px" class="btn btn-secondary button-sign"><img src="icons/cart-white.png" height="20px" width="20px">Cart</button></a>
+                    </div>
+                </div>
+            </section>
+        </nav>
+        <h1 style="text-align: center">WORK IN PROGRESS!!</h1>
+        <h2 style="text-align: center">Come back later :)</h2>
+    </body>
 </html>
