--- a/index.html
+++ b/index.html
@@ -83,11 +83,10 @@
                             <h1 class="header-title">Techno Shop</h1>
                         </div>
                         <div class="col-md-4">
-
                         </div>
                         <div class="col-md-4">
                             <button type="button" style="margin-top: 10px" class="btn btn-primary button-cart">Sign in</button>
-                            <a style="text-decoration: none" href="cart.html">
+                            <a style="text-decoration: none" href="">
                             <button type="button" style="margin-top: 10px" class="btn btn-secondary button-sign"><img src="icons/cart-white.png" height="20px" width="20px">Cart</button></a>
                         </div>
                     </div>
